# SparrowEngine

./: .gitignore  CMakeLists.txt  xmake.lua
core/: CMakeLists.txt
core/include/sparrow_engine/: behavior.hpp  engine.hpp  game_object.hpp  game_window.hpp  input.hpp  lighting.hpp  logger.hpp  material.hpp  model_loader.hpp  scene.hpp  shader.hpp  texture.hpp  time.hpp  transform.hpp  utils.hpp
core/include/sparrow_engine/components/: camera.hpp  light.hpp  mesh.hpp
core/src/: behavior.cpp  engine.cpp  game_object.cpp  game_window.cpp  input.cpp  lighting.cpp  logger.cpp  material.cpp  model_loader.cpp  scene.cpp  shader.cpp  texture.cpp  time.cpp  transform.cpp  utils.cpp
core/src/components/: camera.cpp  light.cpp  mesh.cpp
core/src/dummy/: main.cpp
example/: CMakeLists.txt
example/resources/shaders/: double_texture_shader.fs.glsl  object_light_shader.fs.glsl  object_light_shader_old.fs.glsl  standard.fs.glsl  standard.vs.glsl  transform_shader.vs.glsl  transform_viewspace_shader.vs.glsl
example/shaders/: base_shader.fs.glsl  double_texture_shader.vs.glsl  object_light_shader.fs.glsl  object_light_shaderv2.fs.glsl  standard.fs.glsl  standard.vs.glsl  texture_shader.fs.glsl  texture_shader.vs.glsl  transform_shader.vs.glsl  transform_viewspace_shader.vs.glsl
example/src/: constants.cpp  constants.hpp  main.cpp
example/src/scenes/: common.cpp  common.hpp  scene1.cpp  scene1.hpp  scene2.cpp  scene2.hpp  scene3.cpp  scene3.hpp  scene4.cpp  scene4.hpp  velociraptor-scene.hpp
example/src/scripts/: camera_movement.cpp  camera_movement.hpp  transform_modification.cpp  transform_modification.hpp
